# FastAPI_Assign_1

./: pyproject.toml
todos/: main.py
