[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["BaniSidhu <142618995+BaniSidhu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
